<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/displayPDR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_pdr"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/displayWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_wifi"
            android:textAlignment="viewStart"
            android:textColor="@color/green"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/displayGNSS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_gnss"
            android:textAlignment="viewStart"
            android:textColor="@color/red"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/displayFused"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_kalman"
            android:textAlignment="viewStart"
            android:textColor="@color/cyan"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/curBuilding"
            android:textAlignment="viewStart"
            android:textColor="@color/pastelBlue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/curBuilding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/curr_building"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/floor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floor"
            android:textAlignment="viewStart"
            android:textColor="@color/pastelBlue"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/floorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/floors_nucleus"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_error"
            android:textAlignment="viewStart"
            android:textColor="@color/pastelBlue"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/togglePosError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/error_title"
            android:textAlignment="viewStart"
            android:textColor="@color/pastelBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/error_pdr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_pdr"
            android:textAlignment="viewStart"
            android:textColor="@color/pastelBlue"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/errorParticlepdr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errors"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/error_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/error_wifi"
            android:textAlignment="viewStart"
            android:textColor="@color/pastelBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorParticlewifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/errors"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/error_gnss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_gnss"
            android:textAlignment="viewStart"
            android:textColor="@color/pastelBlue"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/errParticlegnss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errors"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>
